snapshots/truth__parse__tests__unclosed_comment.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Expr>(\"\", r#\" /* comment \"#).trim()"
---
error: invalid token
  ┌─ <input>:1:2
  │
1 │  /* comment 
  │  ^^^^^^^^^^^ invalid token
